fix delete button covered by main tool bar

--- a/src/web/app/views/beambox/Right-Panels/PathEditPanel.module.scss
+++ b/src/web/app/views/beambox/Right-Panels/PathEditPanel.module.scss
@@ -49,7 +49,7 @@
     border: none;
 
     .node-type-panel {
-      padding: 20px 30px 0 30px;
+      padding: 5px 30px 0 30px;
 
       .divider {
         border: none;
